--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
 * {
     margin: 0;
     padding: 0;
     font-family: "General Sans";
     box-sizing: border-box;
+}
+
+body {
+    font-family: "Poppins", sans-serif;
 }
 
 html, body {
@@ -75,4 +81,9 @@ html, body {
     text-transform: uppercase;
     font-size: 15px;
     text-align: right !important;
+}
+
+.chhotiheadings {
+    display: flex;
+
 }
