--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "General Sans";
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Rubik', sans-serif;
     box-sizing: border-box;
 }
 
 html, body {
     width: 100%;
     height: 100%;
+}
+
+#minicircle {
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    z-index: 99999;
+    border-radius: 50%;
+    background-color: #fff;
 }
 
 .bounding {
@@ -37,14 +48,14 @@ html, body {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding:20px 40px;
-    color: white;
+    padding: 20px 40px;
+    color: #fff;
 }
 
 #nav a {
     text-decoration: none;
     font-size: 18px;
-    color:#fff;
+    color: #fff;
 }
 
 #heading {
@@ -77,7 +88,7 @@ html, body {
     text-align: right !important;
 }
 
-.chhotiheadings {
+#chhotiheadings {
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -85,7 +96,7 @@ html, body {
     padding-right: 50px;
 }
 
-.chhotiheadings h5 {
+#chhotiheadings h5 {
     text-transform: uppercase;
     margin-top: .5vw;
     font-size: 1vw;
@@ -102,29 +113,29 @@ html, body {
     justify-content: space-between;
 }
 
-#herofooter a{
-    color: white;
+#herofooter a {
+    color: #fff;
     text-transform: uppercase;
     text-decoration: none;
 }
 
 #herofooter #iconset {
     display: flex;
-    gap: 5px;  
+    gap: 5px;
 }
 
-#herofooter .circle{
+#herofooter .circle {
     display: flex;
-    background-color: #888;
     align-items: center;
     justify-content: center;
     width: 25px;
     height: 25px;
     border-radius: 50%;
+    background-color: #888;
 }
 
 #second {
-    color:#fff white;
+    color: #fff;
     padding-right: 10vw;
     padding-top: 200px;
     background-color: black;
@@ -141,6 +152,12 @@ html, body {
     padding: 3.5vw 3vw;
     padding-right: 0;
     border-top: 1px solid #888;
+}
+
+.elem h1 {
+    text-transform: uppercase;
+    font-size: 7.6vw;
+    opacity: .7;
 }
 
 .elemlast {
@@ -162,7 +179,7 @@ html, body {
     gap: 50px;
     color: #fff;
     padding: 10vw 10vw;
-    padding-left: 25vw;
+    padding-left: 40vw;
     width: 100%;
     background-color: black;
 }
@@ -183,7 +200,7 @@ html, body {
 }
 
 #about img {
-    width: 400px;
+    width: 200px;
 }
 
 #textabout a {
